--- a/scripts/vs-corelationplot.rmd
+++ b/scripts/vs-corelationplot.rmd
@@ -68,7 +68,7 @@ Corelation_DF <-
     TWR = "ti_research",
     FA = "funding_agency",
     ## Typical week Research
-    BR = "in_a_typical_day_how_often",
+    BF = "in_a_typical_day_how_often",
     ## Break Frequency
     NP = "what_is_the_average_number",
     ## Average Number of Proposal per year
@@ -113,10 +113,10 @@ for (i in 1:nrow(Corelation_DF)) {
     Corelation_DF$WH[i] = 2
   }
   
-  if (Corelation_DF$BR[i] == "Every hour") {
-    Corelation_DF$BR[i] = 1
+  if (Corelation_DF$BF[i] == "Every hour") {
+    Corelation_DF$BF[i] = 1
   } else if (Corelation_DF$BR[i] == "Every 1-2 hours") {
-    Corelation_DF$BR[i] = 1
+    Corelation_DF$BF[i] = 1
   } else if (Corelation_DF$BR[i] == "Every 3-4 hours") {
     Corelation_DF$BR[i] = 2
   } else {
